[project]
name = "env-isaaclab"
version = "0.1.0"
description = "A uv-managed Python environment for NVIDIA IsaacLab experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "isaaclab[isaacsim,all]",
    "rl-games",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
isaaclab = { index = "pypi-nvidia" }
rl-games = { git = "https://github.com/isaac-sim/rl_games.git", rev = "python3.11" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com"
explicit = true