[project]
name = "env-isaaclab"
version = "0.1.1"
description = "A uv-managed Python environment for NVIDIA IsaacLab experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "rl_games==1.6.1",
    "isaaclab[all,isaacsim]==2.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
isaaclab = { index = "pypi-nvidia" }
rl-games = { git = "https://github.com/isaac-sim/rl_games.git", rev = "python3.11" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.ruff]
ignore = ["E402"]
